js functionality for seat selection

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div class="theater-container">
     <label for="Choose a play:"></label>
     <select id="play">
-      <option value="10">Arsenic and Old Lace ($)10</option>
+      <option value="10">Arsenic and Old Lace ($10)</option>
       <option value="12">Hair ($12)</option>
       <option value="8">Phantom of the Opera ($8)</option>
       <option value="9">A Midsummer Night's Dream ($9)</option>
